zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_new_tab_action_with_layout_string.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: output
---
NewTab(
    None,
    None,
    Some(
        TiledPaneLayout {
            children_split_direction: Horizontal,
            name: None,
            children: [
                TiledPaneLayout {
                    children_split_direction: Horizontal,
                    name: None,
                    children: [],
                    split_size: None,
                    run: Some(
                        Cwd(
                            "./.",
                        ),
                    ),
                    borderless: None,
                    focus: None,
                    external_children_index: None,
                    children_are_stacked: false,
                    is_expanded_in_stack: false,
                    exclude_from_sync: None,
                    run_instructions_to_ignore: [],
                    hide_floating_panes: false,
                    pane_initial_contents: None,
                    default_fg: None,
                    default_bg: None,
                },
                TiledPaneLayout {
                    children_split_direction: Horizontal,
                    name: None,
                    children: [],
                    split_size: None,
                    run: Some(
                        Cwd(
                            "./.",
                        ),
                    ),
                    borderless: None,
                    focus: None,
                    external_children_index: None,
                    children_are_stacked: false,
                    is_expanded_in_stack: false,
                    exclude_from_sync: None,
                    run_instructions_to_ignore: [],
                    hide_floating_panes: false,
                    pane_initial_contents: None,
                    default_fg: None,
                    default_bg: None,
                },
                TiledPaneLayout {
                    children_split_direction: Horizontal,
                    name: None,
                    children: [],
                    split_size: None,
                    run: Some(
                        Cwd(
                            "./.",
                        ),
                    ),
                    borderless: None,
                    focus: None,
                    external_children_index: None,
                    children_are_stacked: false,
                    is_expanded_in_stack: false,
                    exclude_from_sync: None,
                    run_instructions_to_ignore: [],
                    hide_floating_panes: false,
                    pane_initial_contents: None,
                    default_fg: None,
                    default_bg: None,
                },
            ],
            split_size: None,
            run: Some(
                Cwd(
                    ".",
                ),
            ),
            borderless: None,
            focus: None,
            external_children_index: None,
            children_are_stacked: false,
            is_expanded_in_stack: false,
            exclude_from_sync: None,
            run_instructions_to_ignore: [],
            hide_floating_panes: false,
            pane_initial_contents: None,
            default_fg: None,
            default_bg: None,
        },
    ),
    [],
    1,
    2,
    None,
    false,
    true,
    (
        10,
        false,
    ),
    Some(
        NotificationEnd {
            channel: None,
            resolution: Some(
                Pending,
            ),
            exit_status: None,
            unblock_condition: None,
            affected_pane_id: None,
            affected_tab_id: None,
            error_message: None,
            stdout_message: None,
        },
    ),
    None,
)
