zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_scroll_up_action.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{}\", final_snapshot)"
---
00 (C): ┌ Pane #1 ────────────── SCROLL:  2/13 ┐┌ Pane #2 ─────────────────────────────┐
01 (C): │fill pane up with something 11        ││                                      │
02 (C): │fill pane up with something 12        ││                                      │
03 (C): │fill pane up with something 13        ││                                      │
04 (C): │fill pane up with something 14        ││                                      │
05 (C): │fill pane up with something 15        ││                                      │
06 (C): │fill pane up with something 16        ││                                      │
07 (C): │fill pane up with something 17        ││                                      │
08 (C): │fill pane up with something 18        ││                                      │
09 (C): └──────────────────────────────────────┘└──────────────────────────────────────┘
